[package]
name = "graviton-explorer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
console = "0.14.0"
actix-web = "3.3.2"
bs58 = "0.4.0"
serde = "1.0"
serde_json = "1.0"
arrayref = "0.3.6"
web3 = "0.16.0"

protobuf = "2.24.1"